--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = create-drop
 # alternative: try to automatically update tables on entity changes
 # spring.jpa.hibernate.ddl-auto = update
+management.endpoints.web.exposure.include=health,prometheus
