--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
       - 3306:3306
     environment:
       MARIADB_ROOT_PASSWORD: root
+    volumes:
+      - ./mariadb-data:/var/lib/mysql
