--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/pe2?createDatabaseIfNotExi
 # MariaDB username and PW
 spring.datasource.username = root
 spring.datasource.password = root
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 # delete database content before application shutdown (useful for testing)
 spring.jpa.hibernate.ddl-auto = create-drop
 # alternative: try to automatically update tables on entity changes
