--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,9 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
-end_of_line = crlf
 charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = false
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.{yml,yaml}]
+indent_size = 2
