--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,7 +8,7 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.head_ref || github.ref }}"
   cancel-in-progress: true
 jobs:
-  lint:
+  lint-md:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
@@ -18,3 +18,20 @@ jobs:
         with:
           globs: |
             **/*.md
+  lint-js:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+      - name: npm ci
+        run: |
+          cd frontend
+          npm ci
+      - name: npm run lint
+        run: |
+          cd frontend
+          npm run lint
