--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 # delete database content before application shutdown (useful for testing)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 # alternative: try to automatically update tables on entity changes
 # spring.jpa.hibernate.ddl-auto = update
 management.endpoints.web.exposure.include=health,prometheus
