--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "agnostic-vue": "^1.1.3",
+    "marked": "^15.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
