--- a/api/pom.xml
+++ b/api/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>commons-csv</artifactId>
             <version>1.10.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-evaluator-metro</artifactId>
+            <version>1.6.4</version>
+        </dependency>
     </dependencies>
 
     <build>
