--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@mdi/font": "^7.4.47",
     "agnostic-vue": "^1.1.3",
     "file-saver": "^2.0.5",
     "marked": "^15.0.3",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue": "^3.5.13",
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
